fix tokenless token chara

--- a/css/akchardetail.css
+++ b/css/akchardetail.css
@@ -1181,6 +1181,18 @@ body {
 #selectedopclass{
     
 }
+.storyrow{
+    margin-right: 0px;
+    margin-left: 0px
+}
+.storysplit{
+    padding-left: 5px;
+    padding-right:5px;
+}
+.storyrow .col-12{
+    padding-left: 5px;
+    padding-right:5px;
+}
 
 @media (max-width: 1000px ){
     .opresult-grid{
