add multiple donation site support

--- a/css/ak.css
+++ b/css/ak.css
@@ -645,6 +645,26 @@ html, body {
     border:0px;
     border-radius: 0px;
 }
+.acedonate-body{
+    display: inline-flex;
+    flex-direction: column;
+    color:#fff;
+    text-align: center;
+    min-height: 200px;
+}
+
+.acedonate-card{
+    display: inline-flex;
+    background: #333;
+    min-height: 80px;
+    margin: 5px;
+    padding: 5px;
+    border-radius: 4px;
+    flex-direction: column;
+    flex-basis: 100%;
+    align-items: center;
+    vertical-align: middle;
+}
 
 @media (max-width:768px) {
     .navbar-collapse {
