some text adjustments

--- a/css/akchardetail.css
+++ b/css/akchardetail.css
@@ -476,7 +476,6 @@ body {
     font-size: 1em;
     top: 0;
     color: white;
-    font-family: 'NotoSansHans Light', Arial, sans-serif;
 }
 
 .general-stats-container .topright {
@@ -647,7 +646,7 @@ body {
     min-width: 115px;
     text-align: center;
     color:#ddd;
-    font-size: 13px;
+    font-size: 14px;
     padding:3px;
     border-radius:  2px 0px 0px 2px;
     margin-bottom:2px;
@@ -663,7 +662,8 @@ body {
     min-width: 55px;
     text-align: center;
     color:#ffffff;
-    font-size: 13px;
+    font-size: 14px;
+    font-weight: 600;
     padding:3px;
     padding-left: 5px;
     padding-right: 5px;
@@ -881,6 +881,8 @@ body {
     border-radius:0px;
     background: #666;
     color:#ddd;
+    font-weight: 600;
+    font-size: 1em;
     text-align: center;
     border:0px solid #444;
 }
