--- a/css/ak.css
+++ b/css/ak.css
@@ -21,10 +21,76 @@
     url("fonts/Novecentosanswide-Normal-webfont.otf") format("opentype"),
     url("fonts/Novecentosanswide-Normal-webfont.svg#filename") format("svg");
 }
+/* source-sans-pro-italic - latin */
+@font-face {
+  font-family: 'Source Sans Pro';
+  font-style: italic;
+  font-weight: 400;
+  src: url('fonts/source-sans-pro-v13-latin-italic.eot'); /* IE9 Compat Modes */
+  src: local('Source Sans Pro Italic'), local('SourceSansPro-Italic'),
+       url('fonts/source-sans-pro-v13-latin-italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('fonts/source-sans-pro-v13-latin-italic.woff2') format('woff2'), /* Super Modern Browsers */
+       url('fonts/source-sans-pro-v13-latin-italic.woff') format('woff'), /* Modern Browsers */
+       url('fonts/source-sans-pro-v13-latin-italic.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('fonts/source-sans-pro-v13-latin-italic.svg#SourceSansPro') format('svg'); /* Legacy iOS */
+}
+/* source-sans-pro-regular - latin */
+@font-face {
+  font-family: 'Source Sans Pro';
+  font-style: normal;
+  font-weight: 400;
+  src: url('fonts/source-sans-pro-v13-latin-regular.eot'); /* IE9 Compat Modes */
+  src: local('Source Sans Pro Regular'), local('SourceSansPro-Regular'),
+       url('fonts/source-sans-pro-v13-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('fonts/source-sans-pro-v13-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('fonts/source-sans-pro-v13-latin-regular.woff') format('woff'), /* Modern Browsers */
+       url('fonts/source-sans-pro-v13-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('fonts/source-sans-pro-v13-latin-regular.svg#SourceSansPro') format('svg'); /* Legacy iOS */
+}
+/* source-sans-pro-600 - latin */
+@font-face {
+  font-family: 'Source Sans Pro';
+  font-style: normal;
+  font-weight: 600;
+  src: url('fonts/source-sans-pro-v13-latin-600.eot'); /* IE9 Compat Modes */
+  src: local('Source Sans Pro SemiBold'), local('SourceSansPro-SemiBold'),
+       url('fonts/source-sans-pro-v13-latin-600.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('fonts/source-sans-pro-v13-latin-600.woff2') format('woff2'), /* Super Modern Browsers */
+       url('fonts/source-sans-pro-v13-latin-600.woff') format('woff'), /* Modern Browsers */
+       url('fonts/source-sans-pro-v13-latin-600.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('fonts/source-sans-pro-v13-latin-600.svg#SourceSansPro') format('svg'); /* Legacy iOS */
+}
+/* source-sans-pro-700 - latin */
+@font-face {
+  font-family: 'Source Sans Pro';
+  font-style: normal;
+  font-weight: 700;
+  src: url('fonts/source-sans-pro-v13-latin-700.eot'); /* IE9 Compat Modes */
+  src: local('Source Sans Pro Bold'), local('SourceSansPro-Bold'),
+       url('fonts/source-sans-pro-v13-latin-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('fonts/source-sans-pro-v13-latin-700.woff2') format('woff2'), /* Super Modern Browsers */
+       url('fonts/source-sans-pro-v13-latin-700.woff') format('woff'), /* Modern Browsers */
+       url('fonts/source-sans-pro-v13-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('fonts/source-sans-pro-v13-latin-700.svg#SourceSansPro') format('svg'); /* Legacy iOS */
+}
+/* source-sans-pro-900 - latin */
+@font-face {
+  font-family: 'Source Sans Pro';
+  font-style: normal;
+  font-weight: 900;
+  src: url('fonts/source-sans-pro-v13-latin-900.eot'); /* IE9 Compat Modes */
+  src: local('Source Sans Pro Black'), local('SourceSansPro-Black'),
+       url('fonts/source-sans-pro-v13-latin-900.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('fonts/source-sans-pro-v13-latin-900.woff2') format('woff2'), /* Super Modern Browsers */
+       url('fonts/source-sans-pro-v13-latin-900.woff') format('woff'), /* Modern Browsers */
+       url('fonts/source-sans-pro-v13-latin-900.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('fonts/source-sans-pro-v13-latin-900.svg#SourceSansPro') format('svg'); /* Legacy iOS */
+}
 
 body{
     background-color: rgb(54, 54, 54);
-    font-family: 'NotoSansHans Light', Arial, sans-serif;
+    font-family: 'Source Sans Pro', Arial, sans-serif;
+    font-weight: 400;
 }
 body>nav {
     height: 60px;
@@ -46,6 +112,7 @@ body>nav {
 body>nav .navbar-nav, #navbarNav {
     height: 100%;
 }
+
 
 /* width */
 ::-webkit-scrollbar {
@@ -163,6 +230,7 @@ input[type='text'] {
 
 #navbarNav a {
     text-align: center;
+    line-height: 15px;
 }
 .nopadding {
     padding: 0 !important;
@@ -426,7 +494,7 @@ html, body {
 .ak-subtitle{
     color:white;
     position: absolute;
-    margin-top:-10px;
+    margin-top:-15px;
     margin-left: -20px;
     font-size: 10px
 }
@@ -440,6 +508,7 @@ html, body {
     padding-top: 1px;
     padding-bottom:1px;
     border-radius: 2px;
+    font-size: 1.1em;
     /* text-shadow: 0px 0px 2px #2f2f2f ; */
     background-color: #2f2f2f;
     
