some more font adjustments

--- a/css/akchardetail.css
+++ b/css/akchardetail.css
@@ -496,7 +496,7 @@ body {
     padding-left:2px;
     padding-right:2px;
 
-    right:75px;
+    right:90px;
 }
 .general-stats-container .op-name {
     top: -65px;
@@ -550,6 +550,7 @@ body {
     min-width: 330px;
     border-radius: 2px;
     padding:5px;
+    font-size: 14px;
     width: 100%;
     background:#444444;
 }
