add loading overlay

--- a/css/ak.css
+++ b/css/ak.css
@@ -554,6 +554,10 @@ html, body {
     
 }
 
+.ak-subtitle2.medium{
+    font-size: 0.8em;
+}
+
 .ak-title{
     color:#DDD;
     position: absolute;
