add force exit load button tm

--- a/css/ak.css
+++ b/css/ak.css
@@ -799,6 +799,15 @@ html, body {
     animation: 1s ease-out 0s 1 loadingstart;
 }
 
+.loadforce{
+    cursor:pointer;
+    background:#141414;
+    color:#444;
+    display:inline-flex;
+    padding: 5px;
+    margin:5px;
+    border-radius: 5px;
+}
 @keyframes loadingstart {
     0% {
         border-radius: 60px;
